исправление ошибок и стилизация компонентов

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Department management application</title>
 </head>
 <body>
-    <div class="d-flex flex-column justify-content-between h-100" id="root"></div>
+    <div class="d-flex flex-column justify-content-between" id="root"></div>
 </body>
 </html>
