--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Department management application</title>
-<link href="app.css" rel="stylesheet"></head>
+<link rel="shortcut icon" href="favicon.png"><link href="app.css" rel="stylesheet"></head>
 <body>
-    <div class="d-flex flex-column justify-content-between h-100" id="root"></div>
+    <div class="d-flex flex-column justify-content-between" id="root"></div>
 <script type="text/javascript" src="app.js"></script></body>
 </html>
